Fix handling of SafeClientArea for newer iPhones. Update addition of GameCenter capabilities

--- a/ttPong/de.lproj/Localizable.strings
+++ b/ttPong/de.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 /* GameManager.swift */
 "About ttPong" = "ttPONG %@";
-"Author: Raul Costa Junior, 2020.\n\n" = "Raul Costa Junior, 2020 - 2021.";
+"Author: Raul Costa Junior, 2020.\n\n" = "Raul Costa Junior, 2025.";
 "Score Board Disabled" = "Punktetafel deaktiviert";
 "OK" = "OK";
 "To enable the Score Board" = "\nUm die Punktetafel zu aktivieren, melden Sie sich bitte im GameCenter unter Einstellungen > GameCenter an.";
