--- a/ttPong/pt-BR.lproj/Localizable.strings
+++ b/ttPong/pt-BR.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 /* GameManager.swift */
 "About ttPong" = "ttPONG %@";
-"Author: Raul Costa Junior, 2020.\n\n" = "Raul Costa Junior, 2020 - 2021.";
+"Author: Raul Costa Junior, 2020.\n\n" = "Raul Costa Junior, 2025.";
 "Score Board Disabled" = "Placar Desabilitado";
 "OK" = "OK";
 "To enable the Score Board" = "\nPara habilitar o Placar, logue-se no Gamecenter em Ajustes > GameCenter.";
