--- a/ttPong/en.lproj/Localizable.strings
+++ b/ttPong/en.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 /* GameManager.swift */
 "About ttPong" = "ttPONG %@";
-"Author: Raul Costa Junior, 2020.\n\n" = "Raul Costa Junior, 2020 - 2021.";
+"Author: Raul Costa Junior, 2020.\n\n" = "Raul Costa Junior, 2025.";
 "Score Board Disabled" = "Score Board Disabled";
 "OK" = "OK";
 "To enable the Score Board" = "\nTo enable the Score Board, please sign in to GameCenter in Settings > GameCenter.";
